apps/shiori/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiori
  namespace: shiori
  labels:
    app.kubernetes.io/name: shiori
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: shiori
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shiori
    spec:
      containers:
        - name: shiori
          image: "ghcr.io/go-shiori/shiori:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shiori-data
