apps/shiori/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiori
  namespace: shiori
  labels:
    app.kubernetes.io/name: shiori
spec:
  selector:
    app.kubernetes.io/name: shiori
  ports:
    - port: 8080
      targetPort: 8080
